// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Alert Snapshots > renders alert with only description 1`] = `
<div>
  <div
    class="relative w-full rounded-lg border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg]:text-foreground bg-background text-foreground"
    role="alert"
  >
    <div
      class="text-sm [&_p]:leading-relaxed"
    >
      Simple alert message
    </div>
  </div>
</div>
`;

exports[`Alert Snapshots > renders default alert 1`] = `
<div>
  <div
    class="relative w-full rounded-lg border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg]:text-foreground bg-background text-foreground"
    role="alert"
  >
    <h5
      class="mb-1 font-medium leading-none tracking-tight"
    >
      Default Alert
    </h5>
    <div
      class="text-sm [&_p]:leading-relaxed"
    >
      This is a default alert message.
    </div>
  </div>
</div>
`;

exports[`Alert Snapshots > renders destructive alert 1`] = `
<div>
  <div
    class="relative w-full rounded-lg border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 border-destructive/50 text-destructive dark:border-destructive [&>svg]:text-destructive"
    role="alert"
  >
    <h5
      class="mb-1 font-medium leading-none tracking-tight"
    >
      Error
    </h5>
    <div
      class="text-sm [&_p]:leading-relaxed"
    >
      Something went wrong!
    </div>
  </div>
</div>
`;

exports[`Avatar Snapshots > renders avatar with fallback 1`] = `
<div>
  <div
    class="relative flex h-10 w-10 shrink-0 overflow-hidden rounded-full"
  >
    <div
      class="flex h-full w-full items-center justify-center rounded-full bg-muted"
    >
      <span
        class="text-sm font-medium"
      />
    </div>
  </div>
</div>
`;

exports[`Avatar Snapshots > renders avatar with image 1`] = `
<div>
  <div
    class="relative flex h-10 w-10 shrink-0 overflow-hidden rounded-full"
  >
    <div
      class="flex h-full w-full items-center justify-center rounded-full bg-muted"
    >
      <span
        class="text-sm font-medium"
      />
    </div>
  </div>
</div>
`;

exports[`Badge Snapshots > renders all badge variants 1`] = `
<div>
  <div>
    <div
      class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary text-primary-foreground hover:bg-primary/80"
    >
      Default
    </div>
    <div
      class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80"
    >
      Secondary
    </div>
    <div
      class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-destructive text-destructive-foreground hover:bg-destructive/80"
    >
      Destructive
    </div>
    <div
      class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground"
    >
      Outline
    </div>
    <div
      class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-red-100 text-red-800 dark:bg-red-900/30 dark:text-red-400"
    >
      Hot
    </div>
    <div
      class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-amber-100 text-amber-800 dark:bg-amber-900/30 dark:text-amber-400"
    >
      Warm
    </div>
    <div
      class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-blue-100 text-blue-800 dark:bg-blue-900/30 dark:text-blue-400"
    >
      Cold
    </div>
    <div
      class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-emerald-100 text-emerald-800 dark:bg-emerald-900/30 dark:text-emerald-400"
    >
      Success
    </div>
  </div>
</div>
`;

exports[`Badge Snapshots > renders default badge 1`] = `
<div>
  <div
    class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary text-primary-foreground hover:bg-primary/80"
  >
    Default
  </div>
</div>
`;

exports[`Button Snapshots > renders all button sizes 1`] = `
<div>
  <div>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
    >
      Default Size
    </button>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-9 rounded-md px-3"
    >
      Small
    </button>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-11 rounded-md px-8"
    >
      Large
    </button>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 w-10"
    >
      I
    </button>
  </div>
</div>
`;

exports[`Button Snapshots > renders all button variants 1`] = `
<div>
  <div>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
    >
      Default
    </button>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-destructive text-destructive-foreground hover:bg-destructive/90 h-10 px-4 py-2"
    >
      Destructive
    </button>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2"
    >
      Outline
    </button>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-secondary text-secondary-foreground hover:bg-secondary/80 h-10 px-4 py-2"
    >
      Secondary
    </button>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2"
    >
      Ghost
    </button>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 text-primary underline-offset-4 hover:underline h-10 px-4 py-2"
    >
      Link
    </button>
  </div>
</div>
`;

exports[`Button Snapshots > renders button with custom className 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2 custom-class"
  >
    Custom
  </button>
</div>
`;

exports[`Button Snapshots > renders default button 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
  >
    Click me
  </button>
</div>
`;

exports[`Button Snapshots > renders disabled button 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
    disabled=""
  >
    Disabled
  </button>
</div>
`;

exports[`Card Snapshots > renders basic card 1`] = `
<div>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm"
  >
    <div
      class="p-6 pt-0"
    >
      Basic card content
    </div>
  </div>
</div>
`;

exports[`Card Snapshots > renders card with custom className 1`] = `
<div>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm custom-card-class"
  >
    <div
      class="p-6 pt-0"
    >
      Custom styled card
    </div>
  </div>
</div>
`;

exports[`Card Snapshots > renders full card with all sections 1`] = `
<div>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <h3
        class="text-2xl font-semibold leading-none tracking-tight"
      >
        Card Title
      </h3>
      <p
        class="text-sm text-muted-foreground"
      >
        Card description text
      </p>
    </div>
    <div
      class="p-6 pt-0"
    >
      <p>
        Card content goes here
      </p>
    </div>
    <div
      class="flex items-center p-6 pt-0"
    >
      <button
        class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
      >
        Action
      </button>
    </div>
  </div>
</div>
`;

exports[`Checkbox Snapshots > renders checkbox with label 1`] = `
<div>
  <div
    class="flex items-center space-x-2"
  >
    <button
      aria-checked="false"
      class="peer h-4 w-4 shrink-0 rounded-sm border border-primary ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground"
      data-state="unchecked"
      id="terms"
      role="checkbox"
      type="button"
      value="on"
    />
    <label
      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="terms"
    >
      Accept terms and conditions
    </label>
  </div>
</div>
`;

exports[`Checkbox Snapshots > renders checked checkbox 1`] = `
<div>
  <button
    aria-checked="true"
    class="peer h-4 w-4 shrink-0 rounded-sm border border-primary ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground"
    data-state="checked"
    role="checkbox"
    type="button"
    value="on"
  >
    <span
      class="flex items-center justify-center text-current"
      data-state="checked"
      style="pointer-events: none;"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-check h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 6 9 17l-5-5"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Checkbox Snapshots > renders disabled checkbox 1`] = `
<div>
  <button
    aria-checked="false"
    class="peer h-4 w-4 shrink-0 rounded-sm border border-primary ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground"
    data-disabled=""
    data-state="unchecked"
    disabled=""
    role="checkbox"
    type="button"
    value="on"
  />
</div>
`;

exports[`Checkbox Snapshots > renders unchecked checkbox 1`] = `
<div>
  <button
    aria-checked="false"
    class="peer h-4 w-4 shrink-0 rounded-sm border border-primary ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground"
    data-state="unchecked"
    role="checkbox"
    type="button"
    value="on"
  />
</div>
`;

exports[`Input Snapshots > renders default input 1`] = `
<div>
  <input
    class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
    placeholder="Enter text..."
  />
</div>
`;

exports[`Input Snapshots > renders different input types 1`] = `
<div>
  <div>
    <input
      class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
      placeholder="Text input"
      type="text"
    />
    <input
      class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
      placeholder="Email input"
      type="email"
    />
    <input
      class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
      placeholder="Password input"
      type="password"
    />
    <input
      class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
      placeholder="Number input"
      type="number"
    />
    <input
      class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
      placeholder="Search input"
      type="search"
    />
  </div>
</div>
`;

exports[`Input Snapshots > renders disabled input 1`] = `
<div>
  <input
    class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
    disabled=""
    placeholder="Disabled"
  />
</div>
`;

exports[`Input Snapshots > renders input with value 1`] = `
<div>
  <input
    class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
    value="Prefilled value"
  />
</div>
`;

exports[`Label Snapshots > renders label 1`] = `
<div>
  <label
    class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
    for="test"
  >
    Test Label
  </label>
</div>
`;

exports[`Label Snapshots > renders label with input 1`] = `
<div>
  <div>
    <label
      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="email"
    >
      Email
    </label>
    <input
      class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
      id="email"
      placeholder="Enter email"
      type="email"
    />
  </div>
</div>
`;

exports[`Progress Snapshots > renders progress at 0% 1`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    class="relative h-4 w-full overflow-hidden rounded-full bg-secondary"
    data-max="100"
    data-state="indeterminate"
    role="progressbar"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-max="100"
      data-state="indeterminate"
      style="transform: translateX(-100%);"
    />
  </div>
</div>
`;

exports[`Progress Snapshots > renders progress at 50% 1`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    class="relative h-4 w-full overflow-hidden rounded-full bg-secondary"
    data-max="100"
    data-state="indeterminate"
    role="progressbar"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-max="100"
      data-state="indeterminate"
      style="transform: translateX(-50%);"
    />
  </div>
</div>
`;

exports[`Progress Snapshots > renders progress at 100% 1`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    class="relative h-4 w-full overflow-hidden rounded-full bg-secondary"
    data-max="100"
    data-state="indeterminate"
    role="progressbar"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-max="100"
      data-state="indeterminate"
      style="transform: translateX(-0%);"
    />
  </div>
</div>
`;

exports[`Separator Snapshots > renders horizontal separator 1`] = `
<div>
  <div
    class="shrink-0 bg-border h-[1px] w-full"
    data-orientation="horizontal"
    role="none"
  />
</div>
`;

exports[`Separator Snapshots > renders vertical separator 1`] = `
<div>
  <div
    class="h-20"
  >
    <div
      class="shrink-0 bg-border h-full w-[1px]"
      data-orientation="vertical"
      role="none"
    />
  </div>
</div>
`;

exports[`Skeleton Snapshots > renders default skeleton 1`] = `
<div>
  <div
    class="animate-pulse rounded-md bg-muted h-4 w-[250px]"
  />
</div>
`;

exports[`Skeleton Snapshots > renders skeleton avatar 1`] = `
<div>
  <div
    class="animate-pulse bg-muted h-12 w-12 rounded-full"
  />
</div>
`;

exports[`Skeleton Snapshots > renders skeleton card 1`] = `
<div>
  <div
    class="flex flex-col space-y-3"
  >
    <div
      class="animate-pulse bg-muted h-[125px] w-[250px] rounded-xl"
    />
    <div
      class="space-y-2"
    >
      <div
        class="animate-pulse rounded-md bg-muted h-4 w-[250px]"
      />
      <div
        class="animate-pulse rounded-md bg-muted h-4 w-[200px]"
      />
    </div>
  </div>
</div>
`;

exports[`Switch Snapshots > renders checked switch 1`] = `
<div>
  <button
    aria-checked="true"
    class="peer inline-flex h-6 w-11 shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background disabled:cursor-not-allowed disabled:opacity-50 bg-primary"
    role="switch"
    type="button"
  >
    <span
      class="pointer-events-none block h-5 w-5 rounded-full bg-background shadow-lg ring-0 transition-transform translate-x-5"
    />
  </button>
</div>
`;

exports[`Switch Snapshots > renders disabled switch 1`] = `
<div>
  <button
    aria-checked="false"
    class="peer inline-flex h-6 w-11 shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background disabled:cursor-not-allowed disabled:opacity-50 bg-input"
    disabled=""
    role="switch"
    type="button"
  >
    <span
      class="pointer-events-none block h-5 w-5 rounded-full bg-background shadow-lg ring-0 transition-transform translate-x-0"
    />
  </button>
</div>
`;

exports[`Switch Snapshots > renders switch with label 1`] = `
<div>
  <div
    class="flex items-center space-x-2"
  >
    <button
      aria-checked="false"
      class="peer inline-flex h-6 w-11 shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background disabled:cursor-not-allowed disabled:opacity-50 bg-input"
      id="airplane-mode"
      role="switch"
      type="button"
    >
      <span
        class="pointer-events-none block h-5 w-5 rounded-full bg-background shadow-lg ring-0 transition-transform translate-x-0"
      />
    </button>
    <label
      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="airplane-mode"
    >
      Airplane Mode
    </label>
  </div>
</div>
`;

exports[`Switch Snapshots > renders unchecked switch 1`] = `
<div>
  <button
    aria-checked="false"
    class="peer inline-flex h-6 w-11 shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background disabled:cursor-not-allowed disabled:opacity-50 bg-input"
    role="switch"
    type="button"
  >
    <span
      class="pointer-events-none block h-5 w-5 rounded-full bg-background shadow-lg ring-0 transition-transform translate-x-0"
    />
  </button>
</div>
`;

exports[`Textarea Snapshots > renders default textarea 1`] = `
<div>
  <textarea
    class="flex min-h-[80px] w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
    placeholder="Enter text..."
  />
</div>
`;

exports[`Textarea Snapshots > renders disabled textarea 1`] = `
<div>
  <textarea
    class="flex min-h-[80px] w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
    disabled=""
    placeholder="Disabled"
  />
</div>
`;

exports[`Textarea Snapshots > renders textarea with rows 1`] = `
<div>
  <textarea
    class="flex min-h-[80px] w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
    placeholder="5 rows"
    rows="5"
  />
</div>
`;
